zero-cost-templating/tests/ui/compile_fail/must_use.stderr
error: unused `TestTemplate6` that must be used
  --> tests/ui/compile_fail/must_use.rs:18:5
   |
18 |     test_template6!(template);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/ui/compile_fail/must_use.rs:1:9
   |
1  | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(unused_must_use)]` implied by `#[deny(warnings)]`
help: use `let _ = ...` to ignore the resulting value
   |
18 |     let _ = test_template6!(template);;
   |     +++++++                          +
